--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "itcam",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "private": true,
   "dependencies": {
+    "autoprefixer": "^9.6.1",
+    "eslint": "^6.2.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1"
+    "react-scripts": "3.1.1",
+    "typescript": "^3.6.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -27,5 +30,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "postcss-loader": "^3.0.0"
   }
 }
