--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "itcam",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "private": true,
   "dependencies": {
     "autoprefixer": "^9.6.1",
@@ -26,9 +26,9 @@
       "not op_mini all"
     ],
     "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
     ]
   },
   "devDependencies": {
