--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "itcam",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "private": true,
   "dependencies": {
     "autoprefixer": "^9.6.1",
     "eslint": "^6.2.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "typescript": "^3.6.2"
   },
