--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "itcam",
-  "version": "0.3.5",
+  "version": "0.3.6",
   "private": true,
   "repository": {
     "type": "git",
     "url": "https://github.com/Lord1Luciani/itcam"
-},
+  },
   "dependencies": {
     "autoprefixer": "^9.6.1",
     "eslint": "^6.2.2",
@@ -13,6 +13,7 @@
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
+    "redux": "^4.0.4",
     "typescript": "^3.6.2"
   },
   "scripts": {
