--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "itcam",
-  "version": "0.3.7",
+  "version": "0.3.8",
   "private": true,
   "repository": {
     "type": "git",
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "autoprefixer": "^9.6.1",
+    "babel-preset-react-app": "^9.0.1",
     "eslint": "^6.2.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
